--- a/searchStudy/web/css/layout.css
+++ b/searchStudy/web/css/layout.css
@@ -660,13 +660,14 @@ table.mypage_userManager{
     line-height: 1.5;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
-    margin: 10px 10px;
-    
+    margin: 10px 10px;    
 }
+
 table.mypage_userManager thead th {
     width: 190px;
     padding: 10px;
     font-weight: bold;
+    text-align: center;
     vertical-align: top;
     color: #fff;
     background: #e7708d;
@@ -681,6 +682,8 @@ table.mypage_userManager td {
     width: 350px;
     padding: 10px;
 }
+
+
 
 .dothesort{
 	cursor:pointer;	
