--- a/searchStudy/web/css/layout.css
+++ b/searchStudy/web/css/layout.css
@@ -56,6 +56,7 @@ body{width:100%}
 	margin:0 auto;
 	margin-bottom: 20px; 
 }
+
  #main_loginsave label{
 	font-size:20pt;
 }
@@ -148,17 +149,17 @@ body{width:100%}
 	margin-top:20px;
 }
 
-.main_labelRow{
+#loginForm .main_labelRow{
 	border:none;
-	padding:5px;
-	height:30px;
-	
+	height:10px;
+	width:360px;
+	margin-bottom:0px;
 }
 
-.main_loginCheck{
+#loginForm .main_loginCheck{
 	font-size: 12px;
-	position:absolute;
-	margin-top:10px;
+	position:relative;
+	top:-10px;
 }
 
 /*********** join ***********/
@@ -167,7 +168,7 @@ body{width:100%}
 }
 
 #main_join, #main_join div {
-	width: 350px;
+	width: 360px;
 	margin: 0 auto;
 	margin-bottom: 20px;
 }
@@ -204,6 +205,21 @@ body{width:100%}
 ::-moz-placeholder { font-size:10pt } /* firefox 19+ */
 :-ms-input-placeholder { font-size:10pt ;} /* ie */
 input:-moz-placeholder { font-size:10pt }
+/* join input text location */
+#joinForm .main_labelRow{
+	border:none;
+	height:10px;
+	width:360px;
+	position:relative;
+	top:-10px;
+	margin-bottom:0px;
+}
+#joinForm .main_loginCheck{
+	font-size: 12px;
+	position:relative;
+	top:-10px;
+}
+
 
 /*********** main_pwSearchModal ***********/
 #main_pwSearch body {
@@ -238,6 +254,22 @@ input:-moz-placeholder { font-size:10pt }
 #nav_guest a{
 	color:white;
 }
+
+/* join input text location */
+#pwSearchForm .main_labelRow{
+	border:none;
+	height:10px;
+	width:360px;
+	position:relative;
+	top:-10px;
+	margin-bottom:0px;
+}
+#pwSearchForm .main_loginCheck{
+	font-size: 12px;
+	position:relative;
+	top:-10px;
+}
+
 
 ::-webkit-input-placeholder {font-size:10pt }
 ::-moz-placeholder { font-size:10pt } /* firefox 19+ */
@@ -540,7 +572,7 @@ ul.mypage_pwdGuide{
 	text-align: center ;
 }
 
- .inputBox{
+ .inputBox{ 	
 	width: 300px;
 	height: 30px;
 	text-align: center;
