로그인 관련 내용 개선

--- a/searchStudy/web/css/layout.css
+++ b/searchStudy/web/css/layout.css
@@ -255,7 +255,7 @@ input:-moz-placeholder { font-size:10pt }
 	color:white;
 }
 
-/* join input text location */
+/* pwSearchForm input text location */
 #pwSearchForm .main_labelRow{
 	border:none;
 	height:10px;
