나의 즐겨찾기 평점 별 스토어이름 색깔 수정

--- a/searchStudy/web/css/layout.css
+++ b/searchStudy/web/css/layout.css
@@ -323,10 +323,12 @@ div#mypage_bookmarkList{
     display: block;
     font-size: 16px;
     letter-spacing: -1px;
+    color:#fff;
 }
 
 .element>.image>.mypage_bottom>.area {
     font-size: 13px;
+    color:#fff;
 }
 
 
