--- a/searchStudy/web/css/detail.css
+++ b/searchStudy/web/css/detail.css
@@ -174,6 +174,7 @@ p:after{
 #storeAdd_area .textareaBoxWrap{
 	margin:5px;
 	padding: 0px 6px;
+	
 }
 #storeAdd_area .textareaBoxWrap .textareaBox{
 	overflow-y: auto;
@@ -292,4 +293,9 @@ p:after{
     border: 1px solid #c91b3c;
     background: #c91b3c;
      border-radius: 3px;
+}
+#storeAdd_area #storeAdd_price{
+	text-align:right;
+	margin-left:10px;
+	width:150px;
 }
