--- a/searchStudy/web/css/star.css
+++ b/searchStudy/web/css/star.css
@@ -52,6 +52,9 @@
 .star-input>.input>label:hover~label{
     background-image: none;
 }
+.star-input>.input>input[type=checkbox]+label, input[type=radio]+label{
+   background-image: none;
+}
 .star-input>.input>label[for="p1"]{ 
     width: 10px;
     z-index: 10;
